--- a/package.json
+++ b/package.json
@@ -3,8 +3,6 @@
   "version": "1.0.0",
   "devDependencies": {
     "grunt": "0.4.5",
-    "grunt-contrib-clean": "0.5.0",
-    "grunt-contrib-compress": "0.9.1",
     "grunt-contrib-connect": "0.8.0",
     "grunt-contrib-copy": "0.5.0",
     "grunt-contrib-jasmine": "0.6.5",
@@ -13,6 +11,6 @@
     "grunt-contrib-uglify": "0.5.0",
     "grunt-contrib-watch": "0.6.1",
     "grunt-open": "0.2.3",
-    "grunt-ssh": "0.11.2"
+    "grunt-rsync": "2.0.1"
   }
 }
